changes to fix overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,7 @@
 #root {
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+  overflow-y: scroll;
 }
 
 a {
